# src/swagger/documentation.json
@@ -1,32 +1,15 @@
 {
-  "openapi": "3.0.0",
+  "swagger": "2.0",
   "info": {
     "title": "LibMaS API documentation",
     "description": "Final group project for BYU-I CSE341",
-    "version": "0.1a",
-    "schemas": [
-      "http",
-      "https"
-    ],
-    "components": {
-      "securitySchemes": {
-        "sessionAuth": {
-          "type": "apiKey",
-          "in": "cookie",
-          "name": "connect.sid"
-        }
-      }
-    },
-    "security": [
-      {
-        "sessionAuth": []
-      }
-    ]
+    "version": "0.1a"
   },
-  "servers": [
-    {
-      "url": "http://localhost:3000/"
-    }
+  "host": "localhost:3000",
+  "basePath": "/",
+  "schemes": [
+    "http",
+    "https"
   ],
   "paths": {
     "/books/": {
@@ -113,9 +96,7 @@
             "name": "book_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -137,9 +118,7 @@
             "name": "book_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           },
           {
             "name": "body",
@@ -185,9 +164,7 @@
             "name": "book_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -214,9 +191,7 @@
             "name": "book_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -240,9 +215,7 @@
             "name": "book_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -332,9 +305,7 @@
             "name": "bookItemId",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -359,9 +330,7 @@
             "name": "bookItemId",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           },
           {
             "name": "body",
@@ -403,9 +372,7 @@
             "name": "bookItemId",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -432,9 +399,7 @@
             "name": "bookItemId",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -467,44 +432,44 @@
           "Authors"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "dob": {
+                  "example": "any"
+                },
+                "dod": {
+                  "example": "any"
+                },
+                "country": {
+                  "example": "any"
+                },
+                "language": {
+                  "example": "any"
+                },
+                "wiki": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "firstName": {
-                    "example": "any"
-                  },
-                  "lastName": {
-                    "example": "any"
-                  },
-                  "dob": {
-                    "example": "any"
-                  },
-                  "dod": {
-                    "example": "any"
-                  },
-                  "country": {
-                    "example": "any"
-                  },
-                  "language": {
-                    "example": "any"
-                  },
-                  "wiki": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
           }
         }
       }
@@ -520,9 +485,7 @@
             "name": "author_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -544,9 +507,7 @@
             "name": "author_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -565,9 +526,7 @@
             "name": "author_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -600,41 +559,41 @@
           "Loans"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "bookId": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                },
+                "checkOutDate": {
+                  "example": "any"
+                },
+                "dueDate": {
+                  "example": "any"
+                },
+                "returnDate": {
+                  "example": "any"
+                },
+                "feeAssessed": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "bookId": {
-                    "example": "any"
-                  },
-                  "userId": {
-                    "example": "any"
-                  },
-                  "checkOutDate": {
-                    "example": "any"
-                  },
-                  "dueDate": {
-                    "example": "any"
-                  },
-                  "returnDate": {
-                    "example": "any"
-                  },
-                  "feeAssessed": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
           }
         }
       }
@@ -650,9 +609,7 @@
             "name": "loan_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -674,9 +631,7 @@
             "name": "loan_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -701,9 +656,7 @@
             "name": "loan_id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -715,6 +668,127 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Returns all users from the database",
+        "responses": {
+          "200": {
+            "description": "Users retrieved successfully"
+          },
+          "500": {
+            "description": "Internal server error (databse or node)"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Returns a single user with the given ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User with the given id retrieval successfully"
+          },
+          "400": {
+            "description": "Invalid user Id format"
+          },
+          "404": {
+            "description": "User with the given id does not excist"
+          },
+          "500": {
+            "description": "Internal server error (databse or node)"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Updates an existing user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Json containing user data",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "displayName": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User updated successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal server error (databse or node)"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Delete a single suer with the given ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User with the given id deleted successfully"
+          },
+          "400": {
+            "description": "Invalid user Id format"
+          },
+          "404": {
+            "description": "User with the given id does not excist"
+          },
+          "500": {
+            "description": "Internal server error (databse or node)"
           }
         }
       }
